test/types/tuple/dinan/badIndex.good
badIndex.chpl:6: error: tuple index 0 is out of bounds
badIndex.chpl:6: note: tuple elements start at index 1
